# hams-levantine-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: finetune_levantine.yaml  inference.yaml
data/eval_set/: eval_utterances.json
design_doc/: DESIGN.html  DESIGN.md  HF_MODEL_CARD.md  paper.tex
docker/: Dockerfile
examples/: pipecat_bot.py
paper/: hams_v2.tex  shami_tts.tex
paper_assets/: metrics.json
samples/: benchmark_3090_onnx.json  benchmark_3090_torch_fp32.json  benchmark_espeak_cpu.json  manifest.json  sample_codeswitched.phonemes.json  sample_english.phonemes.json  sample_levantine_arabic.phonemes.json
samples/neural/: asr.json  manifest.json  neural_results.json  sample_codeswitched.phonemes.json  sample_english.phonemes.json  sample_levantine_arabic.phonemes.json  utmos.json
samples/neural/eval/: ar_01.phonemes.json  ar_02.phonemes.json  ar_03.phonemes.json  ar_04.phonemes.json  ar_05.phonemes.json  ar_06.phonemes.json  cs_01.phonemes.json  cs_02.phonemes.json  cs_03.phonemes.json  cs_04.phonemes.json  cs_05.phonemes.json  cs_06.phonemes.json  en_01.phonemes.json  en_02.phonemes.json  en_03.phonemes.json  en_04.phonemes.json  en_05.phonemes.json  en_06.phonemes.json
scripts/: auto_audition.py  bigvgan_analyze.py  build_final_samples.py  build_listen_samples.py  build_texture_ab.py  eval_checkpoint.py  filter_manifest.py  finalize_eval.py  finetune_gan.py  finetune_recon.py  inspect_lahgtna.py  install.sh  investigate_tail.py  make_figures.py  make_samples.py  metrics_all.py  prepare_corpora.py  prepare_lahgtna.py  probe_train_vram.py  revocode_bigvgan.py  robustness_check.py  smoke_client.py  spec_compare.py  tail_zoom.py  test_trim.py  texture_analyze.py  texture_check.py  texture_sweep.py  trim_compare.py  upload_hf.py  validate_gpu.py
src/hams_tts/eval/: asr_roundtrip.py  benchmark.py  (+2 more)
tests/: test_codeswitch.py  test_frontend.py  test_inventory.py  test_levantine_g2p.py  test_normalize.py
(+27 files in other folders)
